// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils - fuzzySearch should find data when multiple results are given back 1`] = `
Array [
  Object {
    "item": Object {
      "dprPosition": Object {
        "bottom": 4,
        "left": 1,
        "right": 3,
        "top": 2,
      },
      "originalPosition": Object {
        "bottom": 4,
        "left": 1,
        "right": 3,
        "top": 2,
      },
      "text": "Username",
    },
    "refIndex": 0,
    "score": 0,
  },
  Object {
    "item": Object {
      "dprPosition": Object {
        "bottom": 4,
        "left": 1,
        "right": 3,
        "top": 2,
      },
      "originalPosition": Object {
        "bottom": 4,
        "left": 1,
        "right": 3,
        "top": 2,
      },
      "text": "The currently accepted usernames for",
    },
    "refIndex": 5,
    "score": 0.5184326474378735,
  },
]
`;

exports[`utils - fuzzySearch should find data when multiple results are given back 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "dprPosition": Object {
            "bottom": 4,
            "left": 1,
            "right": 3,
            "top": 2,
          },
          "originalPosition": Object {
            "bottom": 4,
            "left": 1,
            "right": 3,
            "top": 2,
          },
          "text": "Username",
        },
      ],
      Object {
        "ignoreFieldNorm": false,
        "ignoreLocation": false,
        "includeMatches": false,
        "includeScore": true,
        "isCaseSensitive": false,
        "keys": Array [
          "text",
        ],
        "shouldSort": true,
        "useExtendedSearch": false,
      },
    ],
    Array [
      Array [
        Object {
          "dprPosition": Object {
            "bottom": 4,
            "left": 1,
            "right": 3,
            "top": 2,
          },
          "originalPosition": Object {
            "bottom": 4,
            "left": 1,
            "right": 3,
            "top": 2,
          },
          "text": "Username",
        },
        Object {
          "dprPosition": Object {
            "bottom": 4,
            "left": 1,
            "right": 3,
            "top": 2,
          },
          "originalPosition": Object {
            "bottom": 4,
            "left": 1,
            "right": 3,
            "top": 2,
          },
          "text": "Password",
        },
        Object {
          "dprPosition": Object {
            "bottom": 4,
            "left": 1,
            "right": 3,
            "top": 2,
          },
          "originalPosition": Object {
            "bottom": 4,
            "left": 1,
            "right": 3,
            "top": 2,
          },
          "text": "LOGIN",
        },
      ],
      Object {
        "ignoreFieldNorm": false,
        "ignoreLocation": false,
        "includeMatches": false,
        "includeScore": true,
        "isCaseSensitive": false,
        "keys": Array [
          "text",
        ],
        "shouldSort": true,
        "useExtendedSearch": false,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "search": [MockFunction] {
          "calls": Array [
            Array [
              "Username",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Array [
                Object {
                  "item": Object {
                    "dprPosition": Object {
                      "bottom": 4,
                      "left": 1,
                      "right": 3,
                      "top": 2,
                    },
                    "originalPosition": Object {
                      "bottom": 4,
                      "left": 1,
                      "right": 3,
                      "top": 2,
                    },
                    "text": "Username",
                  },
                  "refIndex": 0,
                  "score": 0,
                },
              ],
            },
          ],
        },
      },
    },
    Object {
      "type": "return",
      "value": Object {
        "search": [MockFunction] {
          "calls": Array [
            Array [
              "Username",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Array [
                Object {
                  "item": Object {
                    "dprPosition": Object {
                      "bottom": 4,
                      "left": 1,
                      "right": 3,
                      "top": 2,
                    },
                    "originalPosition": Object {
                      "bottom": 4,
                      "left": 1,
                      "right": 3,
                      "top": 2,
                    },
                    "text": "Username",
                  },
                  "refIndex": 0,
                  "score": 0,
                },
                Object {
                  "item": Object {
                    "dprPosition": Object {
                      "bottom": 4,
                      "left": 1,
                      "right": 3,
                      "top": 2,
                    },
                    "originalPosition": Object {
                      "bottom": 4,
                      "left": 1,
                      "right": 3,
                      "top": 2,
                    },
                    "text": "The currently accepted usernames for",
                  },
                  "refIndex": 5,
                  "score": 0.5184326474378735,
                },
              ],
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`utils - fuzzySearch should find data when only 1 result is given back with a 100% match 1`] = `
Array [
  Object {
    "item": Object {
      "dprPosition": Object {
        "bottom": 4,
        "left": 1,
        "right": 3,
        "top": 2,
      },
      "originalPosition": Object {
        "bottom": 4,
        "left": 1,
        "right": 3,
        "top": 2,
      },
      "text": "Username",
    },
    "refIndex": 0,
    "score": 0,
  },
]
`;

exports[`utils - fuzzySearch should find data when only 1 result is given back with a 100% match 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "dprPosition": Object {
            "bottom": 4,
            "left": 1,
            "right": 3,
            "top": 2,
          },
          "originalPosition": Object {
            "bottom": 4,
            "left": 1,
            "right": 3,
            "top": 2,
          },
          "text": "Username",
        },
      ],
      Object {
        "ignoreFieldNorm": false,
        "ignoreLocation": false,
        "includeMatches": false,
        "includeScore": true,
        "isCaseSensitive": false,
        "keys": Array [
          "text",
        ],
        "shouldSort": true,
        "useExtendedSearch": false,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "search": [MockFunction] {
          "calls": Array [
            Array [
              "Username",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Array [
                Object {
                  "item": Object {
                    "dprPosition": Object {
                      "bottom": 4,
                      "left": 1,
                      "right": 3,
                      "top": 2,
                    },
                    "originalPosition": Object {
                      "bottom": 4,
                      "left": 1,
                      "right": 3,
                      "top": 2,
                    },
                    "text": "Username",
                  },
                  "refIndex": 0,
                  "score": 0,
                },
              ],
            },
          ],
        },
      },
    },
  ],
}
`;
